@@ -1,7 +1,9 @@
-# Automatically generated by php-weathermap v0.96dev
+# Automatically generated by php-weathermap v0.97
 
 
 BACKGROUND images/background1_950x625_197.jpg
+WIDTH 950
+HEIGHT 625
 HTMLSTYLE overlib
 TITLEFONT 30
 TITLE 0.95 Test Map
